chore: Fixed extra space in page1 caused by margin

--- a/css/custom_style.scss
+++ b/css/custom_style.scss
@@ -12,6 +12,8 @@ $scroll-transition-time: 0.6s;
 $scroll-transition-time-debug: 3s;
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -85,6 +87,9 @@ body {
     padding-left: $element-offset-left;
 }
 
+.row:before{
+    content: "";
+}
 .row:after{
     content: "";
     clear: both;
@@ -102,12 +107,12 @@ p {
 }
 
 .paragraph-margin {
-    margin-top: 24px;
+    padding-top: 24px;
 }
 
 .section-margin {
-    margin-top: 48px;
-    margin-bottom: 12px;
+    padding-top: 48px;
+    padding-bottom: 12px;
 }
 
 /* Backgrounds */
@@ -116,16 +121,11 @@ p {
     width: 100%;
     overflow-y: auto;
     background-size: cover;
-    background-attachment: fixed;
 }
 
 .background-window:before background-window:after {
     display: block;
     position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 }
 
 /* Scrollbars */
